--- a/images/nginx/context/etc/nginx/conf.d/default.conf.template
+++ b/images/nginx/context/etc/nginx/conf.d/default.conf.template
@@ -1,5 +1,5 @@
 # default Docker DNS server
-resolver 127.0.0.11;
+resolver {{ getenv "NGINX_RESOLVER" "127.0.0.11" }};
 
 # Select upstream backend to use based on presence of Xdebug cookies and Blackfire headers
 map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie_XDEBUG_TRACE" $fastcgi_backend {
