--- a/images/nginx/context/rootfs/etc/nginx/conf.d/default.conf.template
+++ b/images/nginx/context/rootfs/etc/nginx/conf.d/default.conf.template
@@ -1,8 +1,8 @@
 # default Docker DNS server
 resolver {{ getenv "NGINX_RESOLVER" "127.0.0.11" }};
 
-# Select upstream backend to use based on presence of Xdebug cookies and Blackfire headers
-map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie_XDEBUG_TRACE" $fastcgi_backend {
+# Select upstream backend to use based on presence of Xdebug cookies or request args and Blackfire headers
+map "$http_X_BLACKFIRE_QUERY:$cookie_XDEBUG_SESSION$cookie_XDEBUG_PROFILE$cookie_XDEBUG_TRACE$arg_XDEBUG_SESSION$arg_XDEBUG_SESSION_START" $fastcgi_backend {
     # Nothing for debug and nothing for blackfire means its a pure request
     ":" {{ getenv "NGINX_UPSTREAM_HOST" "php-fpm" }}:{{ getenv "NGINX_UPSTREAM_PORT" "9000" }};
 
