--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,26 @@ on:
       - 'v*'
       - '!v*-beta*'
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.23
+      - name: Download deps
+        run: go mod download -x
+      - name: Test
+        run: go test -race -v ./...
+
   release:
     name: "Release"
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v4
