--- a/.github/workflows/lint-dockerfiles.yml
+++ b/.github/workflows/lint-dockerfiles.yml
@@ -33,4 +33,8 @@ jobs:
       - name: Run Hadolint
         run: |
           set -euo pipefail
-          find ./images -type f -name "tpl.Dockerfile" -print0 | xargs -I{} -0 /bin/bash -c "echo {}; hadolint <(gomplate -f {} -o -)"
+          find ./images -type f -name "tpl.Dockerfile" -print0 | xargs -I{} -0 /bin/bash -c "echo {}; hadolint <(gomplate -f {} -o - | sed '/--exclude/d' )"
+
+# workaround for missing --exclude flag handling in hadolint
+# https://github.com/hadolint/hadolint/issues/1029
+#          find ./images -type f -name "tpl.Dockerfile" -print0 | xargs -I{} -0 /bin/bash -c "echo {}; hadolint <(gomplate -f {} -o -)"
