--- a/images/php-fpm/base/context/rootfs/etc/php/fpm/pool.d/zz-docker.conf.template
+++ b/images/php-fpm/base/context/rootfs/etc/php/fpm/pool.d/zz-docker.conf.template
@@ -4,22 +4,22 @@ daemonize = no
 [www]
 listen = 9000
 pm = dynamic
-pm.max_children = 40
-pm.start_servers = 8
-pm.min_spare_servers = 5
-pm.max_spare_servers = 10
-pm.process_idle_timeout = 10s
-pm.max_requests = 500
+pm.max_children = {{ getenv "PHP_FPM_PM_MAX_CHILDREN" "40" }}
+pm.start_servers = {{ getenv "PHP_FPM_PM_START_SERVERS" "8" }}
+pm.min_spare_servers = {{ getenv "PHP_FPM_PM_MIN_SPARE_SERVERS" "5" }}
+pm.max_spare_servers = {{ getenv "PHP_FPM_PM_MAX_SPARE_SERVERS" "10" }}
+pm.process_idle_timeout = {{ getenv "PHP_FPM_PM_PROCESS_IDLE_TIMEOUT" "10s" }}
+pm.max_requests = {{ getenv "PHP_FPM_PM_MAX_REQUESTS" "500" }}
 
 rlimit_files = 655350
 chdir = /
-catch_workers_output = yes
-request_slowlog_timeout = 5s
-request_terminate_timeout = 3600s
+catch_workers_output = {{ getenv "PHP_FPM_CATCH_WORKER_OUTPUT" "yes" }}
+request_slowlog_timeout = {{ getenv "PHP_FPM_REQUEST_SLOWLOG_TIMEOUT" "5s" }}
+request_terminate_timeout = {{ getenv "PHP_FPM_REQUEST_TERMINATE_TIMEOUT" "3600s" }}
 access.log = /proc/self/fd/2
 access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
 slowlog = /proc/self/fd/2
-php_admin_value[memory_limit] = "2G"
 php_admin_value[error_log] = /proc/self/fd/2
-php_admin_value[error_reporting] = E_ALL & ~E_DEPRECATED & ~E_STRICT
+php_admin_value[memory_limit] = {{ getenv "PHP_FPM_MEMORY_LIMIT" (getenv "PHP_MEMORY_LIMIT" "4G" ) }}
+php_admin_value[error_reporting] = {{ getenv "PHP_ERROR_REPORTING" "E_ALL" }}
 php_admin_flag[log_errors] = on
