--- a/.github/workflows/template-docker-build-php-app-web.yml
+++ b/.github/workflows/template-docker-build-php-app-web.yml
@@ -29,7 +29,9 @@ jobs:
           curl -s https://bashunit.typeddevs.com/install.sh | bash -s -- /usr/local/bin
 
       - name: "Test"
-        run: 'find images/_php-fpm-common/${{ inputs.app_name }}/ -name "*_test.sh" -type f -print0 | xargs -0 -t bashunit'
+        run: |
+          find images/_common/lib/ -name "*_test.sh" -type f -print0 | xargs -0 -t bashunit
+          find images/common/bin/${{ inputs.app_name }}/ -name "*_test.sh" -type f -print0 | xargs -0 -t bashunit
 
   prepare:
     runs-on: ubuntu-latest
