--- a/.github/workflows/docker-build-php-00-chain.yml
+++ b/.github/workflows/docker-build-php-00-chain.yml
@@ -56,7 +56,7 @@ jobs:
 
   utils:
     runs-on: ubuntu-latest
-    needs: [rootless]
+    needs: [web]
     steps:
       - uses: the-actions-org/workflow-dispatch@v4
         with:
@@ -66,7 +66,7 @@ jobs:
 
   apps:
     runs-on: ubuntu-latest
-    needs: [rootless]
+    needs: [utils]
     steps:
       - uses: the-actions-org/workflow-dispatch@v4
         with:
